# joythief

./: .gitignore  .readthedocs.yaml  LICENSE  README.md  pyproject.toml
.github/: dependabot.yml
.github/actions/poetry/: action.yml
.github/workflows/: push.yml
docs/: requirements.txt
docs/source/: conf.py  index.rst
src/: example.py
src/joythief/: __init__.py  compound.py  core.py  data_structures.py  float.py  numbers.py  objects.py  strings.py
tests/: marks.py  test_compound.py  test_core.py  test_example.py  test_float.py  test_numbers.py  test_objects.py  test_strings.py
tests/data_structures/: test_dictcontaining.py  test_mapping_representation.py
tests/strings/: test_jsonstring.py  test_stringcontaining.py  test_stringmatching.py  test_urlstring.py
