[project]
name = "joythief"
# Version is set on publication
version = "0.0.0"
description = "Comparison is the thief of joy"
authors = [
    {name = "Jonathan Sharpe", email = "mail@jonrshar.pe"}
]
license = "ISC"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Other Environment",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: ISC License (ISCL)",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Software Development :: Testing",
    "Topic :: Utilities",
    "Typing :: Typed",
]

[project.urls]
repository = "https://github.com/textbook/joythief"
documentation = "https://joythief.readthedocs.io/"
Issues = "https://github.com/textbook/joythief/issues"
Coverage = "https://coveralls.io/github/textbook/joythief"
Sponsor = "https://ko-fi.com/textbook"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.coverage.html]
directory = "coverage/html"

[tool.coverage.lcov]
output = "coverage/lcov.info"

[tool.coverage.report]
exclude_also = [
    "if tp\\.TYPE_CHECKING:",
    "raise NotImplementedError"
]

[tool.coverage.run]
data_file = "coverage/.coverage"
omit = ["tests/**"]

[tool.isort]
profile = "black"

[tool.mypy]
strict = true

[[tool.mypy.overrides]]
module = "tests.*"
disable_error_code = [
    "no-untyped-def"
]

[tool.poetry]
packages = [{include = "joythief", from = "src"}]

[tool.poetry.group.dev.dependencies]
black = "^25.1.0"
coverage = "^7.10.6"
isort = "^6.0.1"
mypy = "^1.17.1"
pytest = "^8.4.2"
tox = "^4.30.2"

[tool.poetry.group.docs]
optional = true

[tool.poetry.group.docs.dependencies]
myst-parser = {version = "^4.0.1", markers = "python_version>='3.11'"}
sphinx = {version = "^8.2.3", markers = "python_version>='3.11'"}
furo = {version = "^2025.7.19", markers = "python_version>='3.11'"}

[tool.pytest.ini_options]
pythonpath = ["src"]

[tool.tox]
legacy_tox_ini = """
[tox]
envlist = py3{9,10,11,12,13}
isolated_build = True

[testenv]
deps = pytest >=8.4.1, <9
commands = pytest
"""
